--- a/index.html
+++ b/index.html
@@ -1,7 +1,191 @@
 <!DOCTYPE html>
 <html>
+<head>
+	<link rel="stylesheet" href="style.css">
+	
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Londrina+Shadow&display=swap" rel="stylesheet"> 
+	<link href="https://fonts.googleapis.com/css2?family=Londrina+Solid&display=swap" rel="stylesheet"> 
+</head>
 <body>
-<h1>Hello World</h1>
-<img src="gift2.gif">
+	<h1>GMC Secret Santa 2021</h1>
+	
+	<div class="int">
+		Welcome to my poorly constructed gift tracker website.
+		Not all gifts are ready yet, but check back on unwrapping day!
+	</div>
+	
+	<!--div class="main">
+		<div class="box">
+			<h3>Evanski</h3>
+			<a href="test.txt" download>
+			  <img src="gift.gif" width="200" height="200">
+			</a>
+		</div>
+		
+		<div class="box">
+			<h3>PinkySwear</h3>
+			<a href="test.txt" download>
+			  <img src="gift.gif" width="200" height="200">
+			</a>
+		</div>
+		
+		<div class="box">
+			<h3>HayManMarc</h3>
+			<a href="test.txt" download>
+			  <img src="gift.gif" width="200" height="200">
+			</a>
+		</div>
+		
+		<div class="box">
+			<h3>kburkhart84</h3>
+			<a href="test.txt" download>
+			  <img src="gift.gif" width="200" height="200">
+			</a>
+		</div>
+		
+		<div class="box">
+			<h3>Coded Games</h3>
+			<a href="test.txt" download>
+			  <img src="gift.gif" width="200" height="200">
+			</a>
+		</div>
+		
+		<div class="box">
+			<h3>Bart</h3>
+			<a href="test.txt" download>
+			  <img src="gift.gif" width="200" height="200">
+			</a>
+		</div>
+		
+		<div class="box">
+			<h3>rui.r6o</h3>
+			<a href="test.txt" download>
+			  <img src="gift.gif" width="200" height="200">
+			</a>
+		</div>
+		
+		<div class="box">
+			<h3>Alice</h3>
+			<a href="test.txt" download>
+			  <img src="gift.gif" width="200" height="200">
+			</a>
+		</div>
+		
+		<div class="box">
+			<h3>Mr Magnus</h3>
+			<a href="test.txt" download>
+			  <img src="gift.gif" width="200" height="200">
+			</a>
+		</div>
+		
+		<div class="box">
+			<h3>Micah_DS</h3>
+			<a href="test.txt" download>
+			  <img src="gift.gif" width="200" height="200">
+			</a>
+		</div>
+		
+		<div class="box">
+			<h3>matharoo</h3>
+			<a href="test.txt" download>
+			  <img src="gift.gif" width="200" height="200">
+			</a>
+		</div>
+		
+		<div class="box">
+			<h3>Veemonic</h3>
+			<a href="test.txt" download>
+			  <img src="gift.gif" width="200" height="200">
+			</a>
+		</div>
+		
+		<div class="box">
+			<h3>Mightyjor</h3>
+			<a href="test.txt" download>
+			  <img src="gift.gif" width="200" height="200">
+			</a>
+		</div>
+		
+		<div class="box">
+			<h3>BenRK</h3>
+			<a href="test.txt" download>
+			  <img src="gift.gif" width="200" height="200">
+			</a>
+		</div>
+	</div-->
+
+	<div class="main">
+		<div class="box">
+			<h3>Evanski</h3>
+			<img src="gift.gif" width="200" height="200">
+		</div>
+		
+		<div class="box">
+			<h3>PinkySwear</h3>
+			<img src="gift.gif" width="200" height="200">
+		</div>
+		
+		<div class="box">
+			<h3>HayManMarc</h3>
+			<img src="gift.gif" width="200" height="200">
+		</div>
+		
+		<div class="box">
+			<h3>kburkhart84</h3>
+			<img src="gift.gif" width="200" height="200">
+		</div>
+		
+		<div class="box">
+			<h3>Coded Games</h3>
+			<img src="gift2.gif" width="200" height="200">
+		</div>
+		
+		<div class="box">
+			<h3>Bart</h3>
+			<img src="gift2.gif" width="200" height="200">
+		</div>
+		
+		<div class="box">
+			<h3>rui.r6o</h3>
+			<img src="gift.gif" width="200" height="200">
+		</div>
+		
+		<div class="box">
+			<h3>Alice</h3>
+			<img src="gift2.gif" width="200" height="200">
+		</div>
+		
+		<div class="box">
+			<h3>Mr Magnus</h3>
+			<img src="gift.gif" width="200" height="200">
+		</div>
+		
+		<div class="box">
+			<h3>Micah_DS</h3>
+			<img src="gift2.gif" width="200" height="200">
+		</div>
+		
+		<div class="box">
+			<h3>matharoo</h3>
+			<img src="gift.gif" width="200" height="200">
+		</div>
+		
+		<div class="box">
+			<h3>Veemonic</h3>
+			<img src="gift2.gif" width="200" height="200">
+		</div>
+		
+		<div class="box">
+			<h3>Mightyjor</h3>
+			<img src="gift2.gif" width="200" height="200">
+		</div>
+		
+		<div class="box">
+			<h3>BenRK</h3>
+			<img src="gift2.gif" width="200" height="200">
+		</div>
+	</div>
 </body>
 </html>
