--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 		
 		<div class="box">
 			<h3>Mightyjor</h3>
-			<img src="gift2.gif" width="200" height="200">
+			<img src="gift.gif" width="200" height="200">
 		</div>
 		
 		<div class="box">
