--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 		
 		<div class="box">
 			<h3>Coded Games</h3>
-			<img src="gift2.gif" width="200" height="200">
+			<img src="gift.gif" width="200" height="200">
 		</div>
 		
 		<div class="box">
@@ -84,7 +84,7 @@
 		
 		<div class="box">
 			<h3>BenRK</h3>
-			<img src="gift2.gif" width="200" height="200">
+			<img src="gift.gif" width="200" height="200">
 		</div>
 	</div>
 </body>
