--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 		
 		<div class="box">
 			<h3>Veemonic</h3>
-			<img src="gift2.gif" width="200" height="200">
+			<img src="gift.gif" width="200" height="200">
 		</div>
 		
 		<div class="box">
