--- a/index.html
+++ b/index.html
@@ -12,79 +12,110 @@
 	<h1>GMC Secret Santa 2021</h1>
 	
 	<div class="int">
-		Welcome to my poorly constructed gift tracker website.
-		Not all gifts are ready yet, but check back on unwrapping day!
+		<h2>MERRY CHRISTMAS!<br>All gifts have been delivered!</h2>
+		
+		<br>Alternate link to Google Drive folder <a href="https://drive.google.com/drive/folders/1KzXqgrrRvDPsrOJvM5yK1HOlrPIbfkVm?usp=sharing">HERE</a>
+		<br><br>Just click the gift under your name to receive your gift!
+		<br>Happy Holidays!
 	</div>
 	
 	<div class="main">
 		<div class="box">
 			<h3>Evanski</h3>
-			<img src="gift.gif" width="200" height="200">
+			<a href="gifts/GMCSecretSanta2021-Evanski.zip" download>
+			  <img src="gift.gif" width="200" height="200">
+			</a>
 		</div>
 		
 		<div class="box">
 			<h3>PinkySwear</h3>
-			<img src="gift.gif" width="200" height="200">
+			<a href="gifts/pinkyswear.zip" download>
+			  <img src="gift.gif" width="200" height="200">
+			</a>
 		</div>
 		
 		<div class="box">
 			<h3>HayManMarc</h3>
-			<img src="gift.gif" width="200" height="200">
+			<a href="gifts/HayManMarc.zip" download>
+			  <img src="gift.gif" width="200" height="200">
+			</a>
 		</div>
 		
 		<div class="box">
 			<h3>kburkhart84</h3>
-			<img src="gift.gif" width="200" height="200">
+			<a href="gifts/kburkhart_gift.zip" download>
+			  <img src="gift.gif" width="200" height="200">
+			</a>
 		</div>
 		
 		<div class="box">
 			<h3>Coded Games</h3>
-			<img src="gift.gif" width="200" height="200">
+			<a href="https://drive.google.com/file/d/1SUQPlI-wU7qtWUCN15F5Jjtgds0BSdSQ/view?usp=sharing" download>
+			  <img src="gift.gif" width="200" height="200">
+			</a>
 		</div>
 		
 		<div class="box">
 			<h3>Bart</h3>
-			<img src="gift.gif" width="200" height="200">
+			<a href="gifts/To Bart.zip" download>
+			  <img src="gift.gif" width="200" height="200">
+			</a>
 		</div>
 		
 		<div class="box">
 			<h3>rui.r6o</h3>
-			<img src="gift.gif" width="200" height="200">
+			<a href="gifts/Rui.zip" download>
+			  <img src="gift.gif" width="200" height="200">
+			</a>
 		</div>
 		
 		<div class="box">
 			<h3>Alice</h3>
-			<img src="gift.gif" width="200" height="200">
+			<a href="gifts/Alices_Hall_Of_Gratitude.zip" download>
+			  <img src="gift.gif" width="200" height="200">
+			</a>
 		</div>
 		
 		<div class="box">
 			<h3>Mr Magnus</h3>
-			<img src="gift.gif" width="200" height="200">
+			<a href="gifts/secret-santa-2021-mr-magnus.zip" download>
+			  <img src="gift.gif" width="200" height="200">
+			</a>
 		</div>
 		
 		<div class="box">
 			<h3>Micah_DS</h3>
-			<img src="gift.gif" width="200" height="200">
+			<a href="gifts/Secret Santa Micah.zip" download>
+			  <img src="gift.gif" width="200" height="200">
+			</a>
 		</div>
 		
 		<div class="box">
 			<h3>matharoo</h3>
-			<img src="gift.gif" width="200" height="200">
+			<a href="gifts/MatharooOnTheMoon.zip" download>
+			  <img src="gift.gif" width="200" height="200">
+			</a>
 		</div>
 		
 		<div class="box">
 			<h3>Veemonic</h3>
-			<img src="gift.gif" width="200" height="200">
+			<a href="gifts/veemonic_-_secret_santa.zip" download>
+			  <img src="gift.gif" width="200" height="200">
+			</a>
 		</div>
 		
 		<div class="box">
 			<h3>Mightyjor</h3>
-			<img src="gift.gif" width="200" height="200">
+			<a href="https://drive.google.com/file/d/1wP0iPxIn5l28ucyJA5mZcGI7g5hJKSJH/view?usp=sharing" download>
+			  <img src="gift.gif" width="200" height="200">
+			</a>
 		</div>
 		
 		<div class="box">
 			<h3>BenRK</h3>
-			<img src="gift.gif" width="200" height="200">
+			<a href="gifts/Secret_Santa_to_BenRK.zip" download>
+			  <img src="gift.gif" width="200" height="200">
+			</a>
 		</div>
 	</div>
 </body>
